<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_controllers</name>
  <version>0.1.0</version>
  <description>Arm_controllers pkg for Franka Panda</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>urdf</depend>
  <depend>control_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>pluginlib</depend>

  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>joint_state_publisher_gui</depend>

  <depend>effort_controllers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>