<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_description</name>
  <version>0.1.0</version>
  <description>Contains description files</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>ign_ros2_control</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
