<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_gazebo</name>
  <version>0.1.0</version>
  <description>Contains launch files for the franka_gazebo project</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>


  <depend>ros_gz</depend>
  <depend>gazebo_ros</depend>
  <depend>franka_description</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>kdl_parser</depend>
  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>